fix(budgets): corrige apontamentos do review e aprimora geracao de pdf (#222)